0.16.0/_sources/generated_examples/index.rst.txt
:orphan:

.. _gallery:

Interactive examples
====================


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Decoding
--------


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode a video using the VideoDecoder class.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_basic_example_thumb.png
    :alt:

  :doc:`/generated_examples/decoding/basic_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding a video with VideoDecoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode an image into a PyTorch tensor using decode_image. It supports JPEG, PNG, WebP, GIF, AVIF and HEIC, and automatically detects the format for you. You can also call any of the format-specific decoders directly, as they expose more fine-grained options (like CUDA decoding with decode_jpeg).:">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_image_decoding_thumb.png
    :alt:

  :doc:`/generated_examples/decoding/image_decoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding images</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode an audio file using the AudioDecoder class. If you&#x27;re decoding WAV files, also check out the wav_decoder_section section below.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_audio_decoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/audio_decoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding audio streams with AudioDecoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="TorchCodec can use supported Nvidia hardware (see support matrix here) to speed-up video decoding. This is called &quot;CUDA Decoding&quot; and it uses Nvidia&#x27;s NVDEC hardware decoder and CUDA kernels to respectively decompress and convert to RGB. CUDA Decoding can be faster than CPU Decoding for the actual decoding step and also for subsequent transform steps like scaling, cropping or rotating. This is because the decode step leaves the decoded tensor in GPU memory so the GPU doesn&#x27;t have to fetch from main memory before running the transform steps. Encoded packets are often much smaller than decoded frames so CUDA decoding also uses less PCI-e bandwidth.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_basic_cuda_example_thumb.png
    :alt:

  :doc:`/generated_examples/decoding/basic_cuda_example`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Accelerated video decoding on GPUs with CUDA and NVDEC</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will show how to decode streaming data. That is, when files do not reside locally, we will show how to only download the data segments that are needed to decode the frames you care about. We accomplish this capability with Python file-like objects. Our example uses a video file, so we use the VideoDecoder class to decode it. But all of the lessons here also apply to audio files and the AudioDecoder class as well.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_file_like_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/file_like`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Streaming data through file-like support</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will describe the seek_mode parameter of the VideoDecoder class. This parameter offers a trade-off between the speed of the VideoDecoder creation, against the seeking accuracy of the retreived frames (i.e. in approximate mode, requesting the i&#x27;th frame may not necessarily return frame i).">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_approximate_mode_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/approximate_mode`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exact vs Approximate seek mode: Performance and accuracy comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to sample video clips from a video. A clip generally denotes a sequence or batch of frames, and is typically passed as input to video models.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_sampling_thumb.png
    :alt:

  :doc:`/generated_examples/decoding/sampling`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">How to sample video clips</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we&#x27;ll explore different approaches to parallelize video decoding of a large number of frames from a single video. We&#x27;ll compare three parallelization strategies:">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_parallel_decoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/parallel_decoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parallel video decoding: multi-processing and multi-threading</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial consolidates performance optimization techniques for video decoding with TorchCodec. Learn when and how to apply various strategies to increase performance.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_performance_tips_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/performance_tips`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TorchCodec Performance Tips and Best Practices</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will describe the custom_frame_mappings parameter of the VideoDecoder class. This parameter allows you to provide pre-computed frame mapping information to speed up VideoDecoder instantiation, while maintaining the frame seeking accuracy of seek_mode=&quot;exact&quot;.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_custom_frame_mappings_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/custom_frame_mappings`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding with custom frame mappings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we will demonstrate how to use the transforms parameter of the VideoDecoder class. This parameter allows us to specify a list of torchcodec.transforms.DecoderTransform or torchvision.transforms.v2.Transform objects. These objects serve as transform specifications that the VideoDecoder will apply during the decoding process.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_transforms_thumb.png
    :alt:

  :doc:`/generated_examples/decoding/transforms`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoder Transforms: Applying transforms during decoding</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to decode HDR (High Dynamic Range) videos using the output_dtype parameter of the VideoDecoder class.">

.. only:: html

  .. image:: /generated_examples/decoding/images/thumb/sphx_glr_hdr_decoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/decoding/hdr_decoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decoding HDR videos</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Encoding
--------


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to encode an image tensor to JPEG or PNG using the JpegEncoder and PngEncoder classes.">

.. only:: html

  .. image:: /generated_examples/encoding/images/thumb/sphx_glr_image_encoding_thumb.png
    :alt:

  :doc:`/generated_examples/encoding/image_encoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Encoding images</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to encode audio samples to a file or to raw bytes using the AudioEncoder class.">

.. only:: html

  .. image:: /generated_examples/encoding/images/thumb/sphx_glr_audio_encoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/encoding/audio_encoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Encoding audio samples with AudioEncoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to encode video frames using the Encoder class, and we&#x27;ll explore the different encoding parameters available.">

.. only:: html

  .. image:: /generated_examples/encoding/images/thumb/sphx_glr_video_encoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/encoding/video_encoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Encoding video with the Encoder</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we&#x27;ll learn how to encode multiple video and audio streams into a single container using the Encoder class. We&#x27;ll also see how to feed audio samples and video frames incrementally, and how to mix CPU and CUDA video streams.">

.. only:: html

  .. image:: /generated_examples/encoding/images/thumb/sphx_glr_multi_stream_encoding_thumb.jpg
    :alt:

  :doc:`/generated_examples/encoding/multi_stream_encoding`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Encoding audio and video streams with the Encoder</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Migrating from torchvision
--------------------------


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The image decoders and encoders of torchvision.io now live in torchcodec. This is a short guide to porting your code over. Everything you could do with torchvision.io you can do with TorchCodec, usually with a very similar call. And TorchCodec supports many more features. To learn more about the image decoding and encoding features of TorchCodec, refer to the image decoding &lt;sphx_glr_generated_examples_decoding_image_decoding.py&gt; and image encoding &lt;sphx_glr_generated_examples_encoding_image_encoding.py&gt; tutorials.">

.. only:: html

  .. image:: /generated_examples/migration/images/thumb/sphx_glr_torchvision_migration_thumb.png
    :alt:

  :doc:`/generated_examples/migration/torchvision_migration`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Migrating from TorchVision to TorchCodec</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /generated_examples/decoding/index.rst
   /generated_examples/encoding/index.rst
   /generated_examples/migration/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: generated_examples_python.zip </generated_examples/generated_examples_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: generated_examples_jupyter.zip </generated_examples/generated_examples_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
